[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[metadata]
name = pykins
author = Arie Bregman
author_email = bregman.arie@gmail.com
summary = Python API and CLI for Jenkins
description-file = README.md
license = Apache License, Version 2.0
classifier =
    Topic :: Utilities
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    pykins

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    pykins=pykins.cli:main

[bdist_wheel]
universal = 1

[flake8]
exclude=build,.eggs,.tox
statistics=yes
ignore = D
